Styles/styles.css
/* FLEXBOX STYLES */

.main-header, 
.gallery {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	box-sizing: border-box;
}

/* HEADER STYLES */

.main-header {
	height: 7em;
	margin: auto;
	padding: 1em .5em;

}

.search {
	height: 2.5em;
	line-height: 16px;
	border: 2px solid #e5e5e5;
	border-radius: 5px;
	width: 100%;
	max-width: 460px;
}

.search:focus {
	outline: none;
	border: 2px solid #85b46b;
}

/* GALLERY STYLES */

.gallery {
	width: 100%;
	max-width: 1200px;
	margin: 0 auto;
}

.thumbnail {
	margin: 0 30px 60px 30px;
}

/* OVERLAY STYLES */

#overlay {
	background: rgba(0,0,0,0.7);
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	display: none;
	text-align: center;

}

/*#overlay-inner {
	width: 100%;
	height: 90%;
	display: flex;
	flex-direction: row;
	border: 1px solid red;
}*/

#overlay img {
	margin-top: 10%;
	width: 80%;
	max-width: 780px;
}

#overlay img,
#overlay button {
	display: inline-block;
}

#overlay button {
	position: relative;
	background-color: rgba(0,0,0,0);
	width: 10%;
	font-size: 4em;
	padding: 40px 10px;
	color: white;
	border: none;

}

#overlay button:focus {
	outline: none;
}

#overlay p {
	color: white;
	width: 60%;
	max-width: 600px;
	margin: auto;
}



/* MEDIA QUERIES */

@media (min-width: 500px) {
	.main-header,
	.gallery {
		flex-direction: row;
	}

	.gallery {
		flex-wrap: wrap;
	}

}

@media (min-width: 1024px) {
	
}

